# koumakan

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  Rocket.toml  blog.py  controller.py  entity.py  feed.py  koumakan.sql
backend/: .env  Cargo.toml  Rocket.toml
backend/migrations/: 20200830150601_init.sql
backend/src/: catcher.rs  db.rs  error.rs  main.rs  model.rs  util.rs
backend/src/common/: mod.rs  res.rs
backend/src/controller/: article.rs  comment.rs  label_archive.rs  mod.rs  user.rs
common/: Cargo.toml
common/src/: lib.rs  model.rs  schema.rs
frontend/: Cargo.toml  Makefile  index.html
frontend/.cargo/: config
frontend/src/: app.css  lib.rs  main.rs  router.rs
frontend/src/component/: mod.rs
frontend/src/view/: mod.rs
frontend/src/view/index/: index.css  mod.rs
frontend/src/view/indexr/: index2.css  mod.rs
frontend/src/views/: admin.rs  index.rs  mod.rs
frontend/static/: index.css  index.html
sql/: koumakan.sql
src/: controller.rs  db.rs  main.rs  model.rs  models.rs
src/controller/: article.rs  comment.rs  label_archive.rs  mod.rs  user.rs
static/css/: koumakan.css
template/: article.html  base.html  error.html  home.html  main.html
templates/: index.html.hbs
