cargo-features = ["edition"]

[package]
name = "koumakan"
version = "0.1.0"
authors = ["RemiliaForever <remilia@koumakan.cc>"]
edition = "2018"

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_contrib = "0.3.17"
serde = "1.0.79"
serde_json = "1.0.32"
serde_derive = "1.0.79"
diesel = { version = "1.3.3", features = ["sqlite", "chrono", "r2d2"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }
chrono = { version = "0.4.6", features = ["serde"] }
md5 = "0.4.0"
rss = "1.5.0"
lettre = { version = "0.8.2", default-features = false, features = ["sendmail-transport"] }
lettre_email = "0.8.2"
comrak = "0.3.1"
