[package]
name = "koumakan"
version = "0.1.0"
authors = ["RemiliaForever <remilia@koumakan.cc>"]
edition = "2018"

[dependencies]
rocket = "0.4.0-rc"
rocket_contrib = { version = "0.4.0-rc", features = ["diesel_sqlite_pool"] }
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"
chrono = { version = "0.4.6", features = ["serde"] }
md5 = "0.6.0"
rss = "1.6.0"
lettre = { version = "0.8.3", default-features = false, features = ["sendmail-transport"] }
lettre_email = "0.8.3"
comrak = "0.3.1"

diesel = { version = "1.3.3", features = ["sqlite", "chrono", "r2d2"] }
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
