[package]
name = "koumakan"
version = "0.1.0"
authors = ["RemiliaForever <remilia@koumakan.cc>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_contrib = { version = "0.4.0", features = ["diesel_sqlite_pool"] }
serde = "1.0.82"
serde_derive = "1.0.82"
chrono = { version = "0.4.6", features = ["serde"] }
md5 = "0.6.1"
rss = "1.6.1"
lettre = { version = "0.8.3", default-features = false, features = ["sendmail-transport"] }
lettre_email = "0.8.3"
comrak = "0.4.0"

diesel = { version = "1.3.3", features = ["sqlite", "chrono", "r2d2"] }
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
