[package]
name = "koumakan-backend"
version = "0.1.0"
authors = ["RemiliaForever <remilia@koumakan.cc>"]
edition = "2018"

[dependencies]
common = { path = "../common", features = ["sqlx"] }

actix-rt = "1.1.1"
actix-web = "3.0.0-beta.3"
anyhow = "1.0.32"
bincode = "1.3.1"
chrono = "0.4.15"
dotenv = "0.15.0"
env_logger = "0.7.1"
lettre = "0.10.0-alpha.1"
log = "0.4.11"
md5 = "0.7.0"
pulldown-cmark = "0.8.0"
rss = "1.9.0"
serde = { version = "1.0.115", features = ["derive"] }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["macros","migrate","runtime-actix","sqlite"] }
tokio = { version = "0.2.22", features = ["sync"] }
