[package]
name = "koumakan-backend"
version = "0.1.0"
authors = ["RemiliaForever <remilia@koumakan.cc>"]
edition = "2018"

[dependencies]
common = { path = "../common", features = ["sqlx"] }

actix-rt = "2.0.2"
actix-web = "4.0.0-beta.3"
bincode = "1.3.1"
chrono = "0.4.19"
dotenv = "0.15.0"
env_logger = "0.8.3"
lettre = { version = "0.10.0-alpha.5", default-features = false, features = ["builder", "sendmail-transport"] }
log = "0.4.14"
md5 = "0.7.0"
pulldown-cmark = "0.8.0"
rss = "1.10.0"
serde = { version = "1.0.123", features = ["derive"] }
sqlx = { version = "0.5.1", default-features = false, features = ["macros","migrate","runtime-actix-rustls","sqlite"] }
tokio = { version = "1.2.0", features = ["sync"] }
http = "0.2.3"
serde_derive = "1.0.123"
