[package]
name = "koumakan-backend"
version = "0.1.0"
authors = ["RemiliaForever <remilia@koumakan.cc>"]
edition = "2018"

[dependencies]
common = { path = "../common", features = ["sqlx"] }

axum = { version = "0.4.0", features = ["headers"] }
chrono = "0.4.19"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.18"
hyper = "0.14.15"
lettre = { version = "0.10.0-rc.4", default-features = false, features = ["builder", "sendmail-transport", "tokio1"] }
log = "0.4.14"
md5 = "0.7.0"
pulldown-cmark = "0.8.0"
rss = "2.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
sqlx = { version = "0.5.9", default-features = false, features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite"] }
thiserror = "1.0.30"
tokio = { version = "1.14.0", default-features = false, features = ["macros", "time", "signal"] }
tower = { version = "0.4.11", features = ["timeout"] }
tower-http = { version = "0.2.0", features = ["auth", "trace"] }
