[package]
name = "common"
version = "0.1.0"
authors = ["RemiliaForever <remilia@koumakan.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.15", features = ["serde"] }
serde = { version = "1.0.115", features = ["derive"] }

[dependencies.sqlx]
version = "0.4.0-beta.1"
default-features = false
features = ["chrono"]
optional = true

[features]
default = []
