[package]
name = "common"
version = "0.1.0"
authors = ["RemiliaForever <remilia@koumakan.cc>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }

[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = ["chrono"]
optional = true
