[package]
name = "koumakan-frontend"
version = "0.1.0"
authors = ["RemiliaForever <remilia@koumakan.cc>"]
edition = "2018"

[dependencies]
common = { path = "../common" }

yew = "0.10.0"
stdweb = "0.4.20"
web_logger = "0.2.0"
log = "0.4.8"
http = "0.1.20"
failure = "0.1.6"
chrono = "0.4.10"
serde = "1.0.103"
serde_json = "1.0.42"
