[package]
name = "koumakan-frontend"
version = "0.1.0"
authors = ["RemiliaForever <remilia@koumakan.cc>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }

log = "0.4.11"

bincode = "1.3.1"
chrono = "0.4.15"
console_log = "0.2.0"
wasm-bindgen = "0.2.67"
web-sys = "0.3.44"
yew = { version = "0.17.3", features = ["web-sys"] }
