[package]
name = "koumakan-frontend"
version = "0.1.0"
authors = ["RemiliaForever <remilia@koumakan.cc>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }

log = "0.4.14"

bincode = "1.3.3"
chrono = "0.4.19"
console_log = "0.2.0"
wasm-bindgen = "0.2.73"
web-sys = "0.3.50"
yew = { version = "0.17.4", features = ["web-sys"] }
yew-router = { version = "0.14.0", features = ["web-sys"] }
wee_alloc = "0.4.5"
